# nozzle-unreal

./: .gitignore  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: static-package-shape.yml  unreal-buildplugin.yml
Native/: nozzle_unreal_native_bridge.cpp  nozzle_unreal_native_bridge.h  nozzle_unreal_native_bridge_compile_check.cpp
Nozzle/: Nozzle.uplugin
Nozzle/Config/: FilterPlugin.ini
Nozzle/Resources/: README.md
Nozzle/Source/Nozzle/: Nozzle.Build.cs
Nozzle/Source/Nozzle/Private/: NozzleD3D11Bridge.cpp  NozzleD3D11Bridge.h  NozzleNativeBridge.cpp  NozzleNativeBridge.h  NozzleNativeBridgeMetal.mm  NozzleReceiverComponent.cpp  NozzleRuntimeBlueprintLibrary.cpp  NozzleRuntimeModule.cpp  NozzleSenderComponent.cpp
Nozzle/Source/Nozzle/Public/: NozzleDiagnostics.h  NozzleReceiverComponent.h  NozzleRuntimeBlueprintLibrary.h  NozzleRuntimeModule.h  NozzleSenderComponent.h
Nozzle/Source/NozzleEditor/: NozzleEditor.Build.cs
Nozzle/Source/NozzleEditor/Private/: NozzleEditorModule.cpp
Nozzle/Source/NozzleEditor/Public/: NozzleEditorModule.h
Samples/NozzleSmoke/: NozzleSmoke.uproject  README.md
Samples/NozzleSmoke/Config/: DefaultEngine.ini  DefaultGame.ini
Samples/NozzleSmoke/Content/NozzleSmoke/: NozzleSmokeReceiverMaterial.uasset
Samples/NozzleSmoke/Source/: NozzleSmoke.Target.cs  NozzleSmokeEditor.Target.cs
Samples/NozzleSmoke/Source/NozzleSmoke/: NozzleSmoke.Build.cs  NozzleSmoke.cpp
docs/: macos-metal-smoke-protocol.md  phase-0-feasibility.md  runtime-smoke-matrix.md  win64-d3d11-smoke-protocol.md
scripts/: check_build_plugin_package_assertions.py  check_buildplugin_module_dependencies.py  check_buildplugin_module_dependency_assertions.py  check_native_staging.py  check_native_staging_contract_assertions.py  check_package_shape.py  package_source.py  run_build_plugin.py  stage_native_nozzle.py
(+2 files in other folders)
